# pmpp-cuda-study

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: curriculum-map.md  example-conventions.md  index.html  maturity-model.md  publish-in-5-batches.md  robots.txt  site.css  site.js  sitemap.xml  status.md
docs/releases/: v0.1.0.md  v0.2.0.md
examples/001_hello-world-kernel/: README.md  main.cu
examples/002_vector-addition/: README.md  main.cu  meta.yaml
examples/003_vector-subtraction/: README.md  main.cu
examples/004_scalar-vector-multiply/: README.md  main.cu
examples/005_elementwise-array-square/: README.md  main.cu
examples/006_elementwise-absolute-value/: README.md  main.cu
examples/007_saxpy/: README.md  main.cu  meta.yaml
examples/008_copy-array-kernel/: README.md  main.cu
examples/009_reverse-array/: README.md  main.cu
examples/010_clamp-values-to-range/: README.md  main.cu
examples/011_threshold-binary-mask/: README.md  main.cu
examples/012_rgb-to-grayscale/: README.md  main.cu
examples/013_image-inversion/: README.md  main.cu
examples/014_brightness-adjustment/: README.md  main.cu
examples/015_contrast-adjustment/: README.md  main.cu
examples/016_1d-stencil/: README.md  main.cu
examples/017_2d-stencil/: README.md  main.cu
scripts/: build_examples.py  run_smoke_tests.py  update_status_index.py  validate_repo.py
templates/: example_README.md  example_main.cu  example_meta.yaml
tools/: generate_examples.py  implement_batch_021_040.py  implement_batch_041_060.py  normalize_examples.py
(+369 files in other folders)
